Mobile topic containers: Fix right alignment of ellipsis button
The icon element should be aligned with the right side
of the content area, like the expand/collapse button, and
the edit pencil in the main namespace.

--- a/modules/dt.init.less
+++ b/modules/dt.init.less
@@ -350,6 +350,7 @@ span[ data-mw-comment-start ] {
 			display: inline-block;
 			// stylelint-disable-next-line declaration-property-unit-disallowed-list
 			font-size: 14px;
+			margin-right: -5px;
 		}
 
 		&-metadata {
